--- a/Flix/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Flix/Base.lproj/Main.storyboard
@@ -20,9 +20,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <activityIndicatorView key="tableHeaderView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" id="Ijb-ec-RWJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="2"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </activityIndicatorView>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="215" id="hhr-EJ-RK7" customClass="MovieCell">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="215"/>
+                                        <rect key="frame" x="0.0" y="26.5" width="414" height="215"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hhr-EJ-RK7" id="dCI-2V-fDb">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="215"/>
@@ -64,6 +69,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="XDB-8Z-Gl9"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Ijb-ec-RWJ" id="jek-Vo-whX"/>
                         <outlet property="tableView" destination="LXZ-vR-SeJ" id="53X-Dd-4GX"/>
                     </connections>
                 </viewController>
