--- a/Flix/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Flix/Base.lproj/Main.storyboard
@@ -21,9 +21,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="QCt-tr-bk1">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="215" id="hhr-EJ-RK7" customClass="MovieCell">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="215"/>
+                                        <rect key="frame" x="0.0" y="68.5" width="414" height="215"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hhr-EJ-RK7" id="dCI-2V-fDb">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="215"/>
@@ -78,6 +83,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Now Playing" id="XDB-8Z-Gl9"/>
                     <connections>
+                        <outlet property="searchBar" destination="QCt-tr-bk1" id="l7Q-FH-ZWh"/>
                         <outlet property="tableView" destination="LXZ-vR-SeJ" id="53X-Dd-4GX"/>
                     </connections>
                 </viewController>
@@ -108,7 +114,7 @@
             <objects>
                 <viewController id="dgH-l2-Oxp" customClass="DetailsViewController" sceneMemberID="viewController">
                     <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" id="6Gv-VU-dRM">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kU8-1b-hhw">
@@ -149,13 +155,20 @@
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ztr-rf-iOq">
                                 <rect key="frame" x="20" y="356" width="374" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Label">
                                         <attributes>
-                                            <color key="NSColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="NSBackgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <color key="NSColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <font key="NSFont" size="18" name="HiraginoSans-W3"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="1.3" tighteningFactorForTruncation="0.0"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="1.3" defaultTabInterval="29.649999999999999" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
+                                                <tabStops>
+                                                    <textTab alignment="left" location="29.649999618530273">
+                                                        <options/>
+                                                    </textTab>
+                                                </tabStops>
+                                            </paragraphStyle>
                                         </attributes>
                                     </fragment>
                                 </attributedString>
@@ -167,11 +180,13 @@
                         <viewLayoutGuide key="contentLayoutGuide" id="fBo-yo-xDC"/>
                         <viewLayoutGuide key="frameLayoutGuide" id="xmG-bA-xbi"/>
                     </scrollView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Movie Details" id="LR4-i3-CNU"/>
                     <connections>
                         <outlet property="backdropView" destination="kU8-1b-hhw" id="QI6-FV-50d"/>
                         <outlet property="posterView" destination="Q7q-VG-ljT" id="rSd-2J-hxU"/>
                         <outlet property="ratingLabel" destination="qmr-zX-VPS" id="Rn3-cp-Q3Y"/>
+                        <outlet property="scrollView" destination="6Gv-VU-dRM" id="gDa-va-mVp"/>
                         <outlet property="synopsisLabel" destination="Ztr-rf-iOq" id="qos-1X-4Y6"/>
                         <outlet property="titleLabel" destination="eXJ-c8-T1Y" id="Gnu-VP-e73"/>
                     </connections>
@@ -271,7 +286,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="iqE-bv-tD3"/>
+        <segue reference="nq0-wR-MNR"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
